New relative position for main content (css)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,10 @@ html,body {
 }
 
 #content {
-	margin: 100px auto;
+	position: absolute;
+	left: 50%;
+	top: 40%;
+	transform: translateX(-50%) translateY(-50%);
 }
 
 table {
